@@ -4,3 +4,4 @@ Version 0.1.0~dev
 	* Add support for kt-toolbox extract action, closes: #4234.
 	* Add support for manzanita rewrap action, closes: #4239.
 	* Fix module importation in action sub packages.
+	* Do not manage output paths in toolbox2 actions, closes: #4253.
